# ghcCallbackBugRepro

./: CHANGELOG.md  LICENSE  flake.nix  ghcCallbackBugRepro.cabal
csrc/: callme.c
src/: Main.hs
