cabal-version: 3.0
name: ghcCallbackBugRepro
version: 0.1.0.0
synopsis: Reproduces a bug in GHC.
license: MIT
license-file: LICENSE
author: rotaerk
maintainer: m.scott.stewart@gmail.com
category: Testing
build-type: Simple
extra-doc-files: CHANGELOG.md

executable ghcCallbackBugRepro
  ghc-options: -Wall
  main-is: Main.hs
  c-sources: csrc/callme.c
  build-depends: base
  hs-source-dirs: src
  default-language: Haskell2010
